--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<head>
+  <title>J M Moore: Maths Undergraduate</title>
+  <link type='text/css' rel='stylesheet' href='style.css'>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Lobster+Two:400,700" rel="stylesheet">
+</head>
+
+
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div class = "fixed">
+<div class = "headerbox">
+<h1>James Moore: PhD Student in Theoretical Physics</h1>
+</div>
+
+<ul class="nav">
+
+  <li class="button"><a href="index.html">Home</a></li>
+  <li class="button"><a href="research.html">Research</a></li>
+  <li class="button"><a href="notes.html">Notes</a></li>
+
+</ul>
+</div>
+
+<div class="container">
+  <!-- <h2>About me</h2> -->
+  <p>
+
+      <img src="website_photo.png" alt="Profile picture" style="float: right;   width: 300px;  margin-right:-20px; height: auto; padding:50px; margin-top:-10px; padding-bottom:40px;">
+
+      <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a PhD student in the <a href="https://www.damtp.cam.ac.uk/">Department of Applied Mathematics and Theoretical Physics</a> (DAMTP) at the University of Cambridge. I am a member of the <a href="https://www.pbsp.org.uk/">Physics Beyond the Standard Proton</a> (PSBP) research group, headed by Maria Ubiali, and I study the interplay between parton distribution functions and possible beyond the Standard Model physics.<br><br>
+      To find out more about my work, check out the <a href="research.html">Research</a> page. If you are one of my students looking for resources for the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Cambridge Mathematical Tripos</a>, take a look at the <a href="notes.html">Notes</a> page.</p>
+
+    <h2>Contact</h2>
+    <p>The best way to contact me is via email, at <a href="mailto:james.moore@damtp.cam.ac.uk">james.moore@damtp.cam.ac.uk</a>. Alternatively, most of the time you can find me at the Centre for Mathematical Sciences, in office B1.15.</p>
+
+</div>
 
 </body>
-</html> 
+</html>
