--- a/notes.html
+++ b/notes.html
@@ -29,9 +29,17 @@
 
 <hr width=90%>
 
+  <h2> <img src="conductor.png" alt="Conductor" style="float: left;   width: 250px;  margin-left:20px; height: auto; padding:60px; margin-top:-40px; padding-bottom:20px;">Part IB Electromagnetism Handouts </h2>
+
+  <p>  From 2020 to 2022, I supervised the Part IB Electromagnetism course. This course is an introduction to Maxwell's theory of electromagnetism, focussing on electrostatics, magnetostatics, induction, elecomagnetic radiation and some relativistic aspects of electromagnetism. Here is a short revision handout comparing the solution of electrostatic problems with magnetostatic problems.</p>
+
+    <p>1. <a href="statics.pdf">Solving electrostatics vs magnetostatics</a><br></p>
+
+<hr width=90%>
+
   <h2> Part III Symmetries, Fields and Particles Handouts </h2>
 
-  <p> <img src="weightdiagram.png" alt="Weight diagram" style="float: right;   width: 200px;  margin-right:-20px; height: auto; padding:50px; margin-top:-80px; padding-bottom:20px;"> In 2020 and 2021, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
+  <p> <img src="weightdiagram.png" alt="Weight diagram" style="float: right;   width: 200px;  margin-right:-20px; height: auto; padding:50px; margin-top:-80px; padding-bottom:20px;"> In 2020 and 2021, I was one of the examples class leaders for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
 
     <p>1. <a href="groupproducts.pdf">Semi-direct products</a><br>
     2. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br></p>
