--- a/notes.html
+++ b/notes.html
@@ -31,7 +31,7 @@
 
   <h2> <img src="conductor.png" alt="Conductor" style="float: left;   width: 250px;  margin-left:20px; height: auto; padding:60px; margin-top:-40px; padding-bottom:20px;">Part IB Electromagnetism Handouts </h2>
 
-  <p>  From 2020 to 2022, I supervised the Part IB Electromagnetism course. This course is an introduction to Maxwell's theory of electromagnetism, focussing on electrostatics, magnetostatics, induction, elecomagnetic radiation and some relativistic aspects of electromagnetism. Here is a short revision handout comparing the solution of electrostatic problems with magnetostatic problems.</p>
+  <p>  From 2020 to 2022, I supervised the Part IB Electromagnetism course. This course is an introduction to Maxwell's theory of electromagnetism, focussing on electrostatics, magnetostatics, induction, electromagnetic radiation and some relativistic aspects of electromagnetism. Here is a short revision handout comparing the solution of electrostatic problems with magnetostatic problems.</p>
 
     <p>1. <a href="statics.pdf">Solving electrostatics vs magnetostatics</a><br></p>
 
