Uploaded more talks.

--- a/research.html
+++ b/research.html
@@ -43,8 +43,10 @@
 
       <h2>Talks</h2>
  <ul>
-   <li><b>May 2022 (forthcoming):</b> <i>The dark side of the proton</i>, talk for DIS 2022 conference in Santiago de Compostela.</li>
-   <li><b>September 2021:</b> <i>Efficient simultaneous determination of PDFs and SMEFT couplings</i>, talk given as part of NNPDF 2022 Gargagno meeting. Slides available <a href="nnpdf_presentation_2">here</a>.</li>
+   <li><b>May 2022:</b> <i>Parton distributions in the SMEFT, and beyond</i>, plenary talk for Transversity 2022 conference in Pavia. Slides available <a href="pavia2022.pdf">here</a>.</li>
+   <li><b>May 2022:</b> <i>The dark side of the proton</i>, parallel talk for DIS 2022 conference in Santiago de Compostela. Slides available <a href="darkphoton_dis.pdf">here</a>.</li>
+   <li><b>April 2022:</b> <i>The dark side of the proton</i>, talk for DAMTP phenomenology seminars at the University of Cambridge. Slides available <a href="darkphoton.pdf">here</a>.</li>
+   <li><b>September 2021:</b> <i>Efficient simultaneous determination of PDFs and SMEFT couplings</i>, talk given as part of NNPDF 2022 Gargagno meeting. Slides available <a href="nnpdf_presentation_2.pdf">here</a>.</li>
   <li><b>May 2021:</b> <i>Parton distributions in the SMEFT</i>, talk given as part of DAMTP 2nd year PhD seminars. Slides available <a href="SMEFTPDFs.pdf">here</a>.</li>
 </ul>
 
