Updates to webpage.

--- a/research.html
+++ b/research.html
@@ -43,6 +43,7 @@
 
       <h2>Talks</h2>
  <ul>
+   <li><b>September 2022:</b> <i>Beyond the Standard Proton</i>, plenary talk for Parton Distributions and Nucleon Structure 2022 workshop in Seattle. Slides available <a href="seattle2022.pdf">here</a>.</li>
    <li><b>May 2022:</b> <i>Parton distributions in the SMEFT, and beyond</i>, plenary talk for Transversity 2022 conference in Pavia. Slides available <a href="pavia2022.pdf">here</a>.</li>
    <li><b>May 2022:</b> <i>The dark side of the proton</i>, parallel talk for DIS 2022 conference in Santiago de Compostela. Slides available <a href="darkphoton_dis.pdf">here</a>.</li>
    <li><b>April 2022:</b> <i>The dark side of the proton</i>, talk for DAMTP phenomenology seminars at the University of Cambridge. Slides available <a href="darkphoton.pdf">here</a>.</li>
