--- a/notes.html
+++ b/notes.html
@@ -39,11 +39,12 @@
 
   <h2> Part III Symmetries, Fields and Particles Handouts </h2>
 
-  <p> <img src="weightdiagram.png" alt="Weight diagram" style="float: right;   width: 200px;  margin-right:-20px; height: auto; padding:30px; padding-left:50px; margin-top:-60px; padding-bottom:20px;"> In 2020 and 2021, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
+  <p> <img src="weightdiagram.png" alt="Weight diagram" style="float: right;   width: 200px;  margin-right:-20px; height: auto; padding:30px; padding-left:50px; margin-top:-60px; padding-bottom:20px;"> From 2020-2022, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
 
     <p>1. <a href="groupproducts.pdf">Semi-direct products</a><br>
-    2. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
-    3. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br></p>
+    2. <a href="manifolds.pdf">Manifolds: definitions and examples</a><br>
+    3. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
+    4. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br></p>
 
 <hr width=90%>
 
