--- a/notes.html
+++ b/notes.html
@@ -31,15 +31,23 @@
 
   <h2> <img src="conductor.png" alt="Conductor" style="float: left;   width: 250px;  margin-left:20px; height: auto; padding:60px; margin-top:-40px; padding-bottom:20px;">Part IB Electromagnetism Handouts </h2>
 
-  <p>  From 2020 to 2022, I supervised the Part IB Electromagnetism course. This course is an introduction to Maxwell's theory of electromagnetism, focussing on electrostatics, magnetostatics, induction, electromagnetic radiation and some relativistic aspects of electromagnetism. Here is a short revision handout comparing the solution of electrostatic problems with magnetostatic problems.</p>
+  <p>  From 2020 to 2023, I supervised the Part IB Electromagnetism course. This course is an introduction to Maxwell's theory of electromagnetism, focussing on electrostatics, magnetostatics, induction, electromagnetic radiation and some relativistic aspects of electromagnetism. Here is a short revision handout comparing the solution of electrostatic problems with magnetostatic problems.</p>
 
     <p>1. <a href="statics.pdf">Solving electrostatics vs magnetostatics</a><br></p>
 
 <hr width=90%>
 
-  <h2> Part III Symmetries, Fields and Particles Handouts </h2>
+  <h2> <img src="pochhammer.png" alt="Pochhammer Contour" style="float: right;   width: 400px;  margin-left:0px; height: auto; padding:20px; margin-top:0px; padding-bottom:20px;">Part IB Complex Analysis Handouts </h2>
 
-  <p> <img src="weightdiagram.png" alt="Weight diagram" style="float: right;   width: 200px;  margin-right:-20px; height: auto; padding:30px; padding-left:50px; margin-top:-60px; padding-bottom:20px;"> From 2020-2022, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
+  <p>  In 2021 and 2023, I supervised the Part IB Complex Analysis course. This course is an introduction to complex analysis, covering complex differentiation and the Cauchy-Riemann equations, the basic integral theorems of complex analysis, analytic continuation, residue calculus, and some more advanced topics (including Rouche's theorem). Here is a sheet of bonus questions to go alongside the examples sheets.</p>
+
+    <p>1. <a href="Notes/bonusca.pdf">Bonus complex analysis questions</a><br></p>
+
+<hr width=90%>
+
+  <h2> <img src="weightdiagram.png" alt="Weight diagram" style="float: left;   width: 250px;  margin-right:0px; height: auto; padding:40px; padding-left:50px; margin-top:-25px; padding-bottom:20px;"> Part III Symmetries, Fields and Particles Handouts </h2>
+
+  <p>  From 2020 to 2023, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
 
     <p>1. <a href="groupproducts.pdf">Semi-direct products</a><br>
     2. <a href="manifolds.pdf">Manifolds: definitions and examples</a><br>
