--- a/research.html
+++ b/research.html
@@ -32,6 +32,7 @@
 
       <h2>Publications</h2>
  <ul>
+   <li><b>March 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses,</i> with the PBSP team and Juan Rojo. <a href="https://arxiv.org/abs/2303.06159">2303.06159</a>.</li>
    <li><b>March 2022:</b> <i>The dark side of the proton,</i> with Matthew McCullough and Maria Ubiali. <a href="https://arxiv.org/abs/2203.12628">2203.12628</a>.</li>
   <li><b>October 2021:</b> <i>Parton distributions in the SMEFT from high-energy Drell-Yan tails</i> (proceedings for the European Physical Society Conference), with Maeve Madigan. <a href="https://arxiv.org/abs/2110.13204">2110.13204</a>.</li>
   <li><b>April 2021:</b> <i>Parton distributions in the SMEFT from high-energy Drell-Yan tails,</i> with the PBSP team, Admir Greljo, and Juan Rojo. <a href="https://arxiv.org/abs/2104.02723">2104.02723</a>.</li>
