Updated talks list

--- a/research.html
+++ b/research.html
@@ -43,6 +43,12 @@
 
       <h2>Talks</h2>
  <ul>
+   <li><b>June 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses</i>, talk for HEFT 2023 conference at the University of Manchester. Slides available <a href="heft2023.pdf">here</a>.</li>
+   <li><b>May 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses</i>, seminar for the seminar series at the University of Cambridge. Slides available <a href="damtp2023.pdf">here</a>.</li>
+   <li><b>April 2023:</b> <i>Parton distributions in BSM theories</i>, seminar for the seminar series at Argonne National Laboratory. Slides available <a href="anl2023.pdf">here</a>.</li>
+   <li><b>November 2022:</b> <i>The LHC Run II top quark legacy on global PDF and SMEFT analyses</i>, parallel talk for QCD@LHC 2022 conference at IJCLab Orsay, France. Slides available <a href="qcdatlhc2022.pdf">here</a>.</li>
+   <li><b>October 2022:</b> <i>Beyond the Standard Proton</i>, seminar for the PhD seminar series at the University of Edinburgh. Slides available <a href="edinburgh2022.pdf">here</a>.</li>
+   <li><b>October 2022:</b> <i>Beyond the Standard Proton</i>, seminar for the seminar series at Jefferson Lab. Slides available <a href="jlab2022.pdf">here</a>.</li>
    <li><b>September 2022:</b> <i>Beyond the Standard Proton</i>, plenary talk for Parton Distributions and Nucleon Structure 2022 workshop in Seattle. Slides available <a href="seattle2022.pdf">here</a>.</li>
    <li><b>May 2022:</b> <i>Parton distributions in the SMEFT, and beyond</i>, plenary talk for Transversity 2022 conference in Pavia. Slides available <a href="pavia2022.pdf">here</a>.</li>
    <li><b>May 2022:</b> <i>The dark side of the proton</i>, parallel talk for DIS 2022 conference in Santiago de Compostela. Slides available <a href="darkphoton_dis.pdf">here</a>.</li>
