--- a/notes.html
+++ b/notes.html
@@ -50,7 +50,7 @@
   <p>  From 2020 to 2023, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
 
     <p>1. <a href="SymmetriesHandouts/1intro.pdf">Introduction to symmetry in field theories</a><br>
-      2. <a href="groupproducts.pdf">Semi-direct products</a><br>
+      2. <a href="SymmetriesHandouts/2groups.pdf">Elementary aspects of group theory</a><br>
     3. <a href="manifolds.pdf">Manifolds: definitions and examples</a><br>
     4. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
     5. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br></p>
