Added manifolds handouts.

--- a/notes.html
+++ b/notes.html
@@ -51,7 +51,7 @@
 
     <p>1. <a href="SymmetriesHandouts/1intro.pdf">Introduction to symmetry in field theories</a><br>
       2. <a href="SymmetriesHandouts/2groups.pdf">Elementary aspects of group theory</a><br>
-    3. <a href="manifolds.pdf">Manifolds: definitions and examples</a><br>
+    3. <a href="SymmetriesHandouts/3manifolds.pdf">Manifolds</a><br>
     4. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
     5. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br></p>
 
