--- a/notes.html
+++ b/notes.html
@@ -47,7 +47,9 @@
 
   <h2> <img src="weightdiagram.png" alt="Weight diagram" style="float: left;   width: 250px;  margin-right:0px; height: auto; padding:40px; padding-left:50px; margin-top:-25px; padding-bottom:20px;"> Part III Symmetries, Fields and Particles Handouts </h2>
 
-  <p>  From 2020 to 2023, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
+  <p>  <i>Course theme music: <a href="https://open.spotify.com/track/4QMhddW0bANAlaoEgyJmCx?si=487fedf5f4a440b2">Symmetry, by Klangkarussell</a></i><br><br>
+
+    From 2020 to 2023, I was one of the examples class tutors for the Part III Symmetries, Fields and Particles course. This course is an introduction to Lie group theory and its applications in particle physics. Here are handouts on some selected topics from the course:</p>
 
     <p>1. <a href="SymmetriesHandouts/1intro.pdf">Introduction to symmetry in field theories</a><br>
       2. <a href="SymmetriesHandouts/2groups.pdf">Elementary aspects of group theory</a><br>
