Added summary slides for an old version of Sheet 4

--- a/notes.html
+++ b/notes.html
@@ -55,7 +55,8 @@
       2. <a href="SymmetriesHandouts/2groups.pdf">Elementary aspects of group theory</a><br>
     3. <a href="SymmetriesHandouts/3manifolds.pdf">Manifolds</a><br>
     4. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
-    5. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br></p>
+    5. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br>
+    6. <a href="SymmetriesHandouts/old_sheet4.pdf">Summary slides for (an old version of) Sheet 4</a><br></p>
 
 <hr width=90%>
 
