Added Lie groups handout

--- a/notes.html
+++ b/notes.html
@@ -54,9 +54,10 @@
     <p>1. <a href="SymmetriesHandouts/1intro.pdf">Introduction to symmetry in field theories</a><br>
       2. <a href="SymmetriesHandouts/2groups.pdf">Elementary aspects of group theory</a><br>
     3. <a href="SymmetriesHandouts/3manifolds.pdf">Manifolds</a><br>
-    4. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
-    5. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br>
-    6. <a href="SymmetriesHandouts/old_class4.pdf">Summary slides for (an old version of) Sheet 4</a><br></p>
+    4. <a href="SymmetriesHandouts/4liegroups.pdf">Lie groups</a><br>
+    5. <a href="qmsymmetries.pdf">Symmetries in quantum mechanics (non-examinable)</a><br>
+    6. <a href="liealgebras.pdf">Lie algebras from Lie groups</a><br>
+    7. <a href="SymmetriesHandouts/old_class4.pdf">Summary slides for (an old version of) Sheet 4</a><br></p>
 
 <hr width=90%>
 
