Updated from PhD student

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class = "fixed">
 <div class = "headerbox">
-<h1>James Moore: PhD Student in Theoretical Physics</h1>
+<h1>James Moore: Researcher in Particle Physics</h1>
 </div>
 
 <ul class="nav">
@@ -30,7 +30,7 @@
 
       <img src="website_photo.png" alt="Profile picture" style="float: right;   width: 300px;  margin-right:-20px; height: auto; padding:50px; margin-top:-10px; padding-bottom:40px;">
 
-      <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a PhD student in the <a href="https://www.damtp.cam.ac.uk/">Department of Applied Mathematics and Theoretical Physics</a> (DAMTP) at the University of Cambridge. I am a member of the <a href="https://www.pbsp.org.uk/">Physics Beyond the Standard Proton</a> (PBSP) research group, headed by Maria Ubiali, and I study the interplay between parton distribution functions and possible beyond the Standard Model physics.<br><br>
+      <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a particle physicist in the <a href="https://www.damtp.cam.ac.uk/">Department of Applied Mathematics and Theoretical Physics</a> (DAMTP) at the University of Cambridge. I am a member of the <a href="https://www.pbsp.org.uk/">Physics Beyond the Standard Proton</a> (PBSP) research group, headed by Maria Ubiali, and I study the interplay between parton distribution functions and possible beyond the Standard Model physics.<br><br>
       To find out more about my work, check out the <a href="research.html">Research</a> page. If you are one of my students looking for resources for the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Cambridge Mathematical Tripos</a>, take a look at the <a href="notes.html">Notes</a> page.</p>
 
     <h2>Contact</h2>
