--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@
 
 <div class = "fixed">
 <div class = "headerbox">
-<h1>James Moore: PhD Student in Theoretical Physics</h1>
+<h1>James Moore: Researcher in Particle Physics</h1>
 </div>
 
 <ul class="nav">
