Updated research with thesis, new talks, and SIMUnet

--- a/research.html
+++ b/research.html
@@ -32,6 +32,7 @@
 
       <h2>Publications</h2>
  <ul>
+   <li><b>February 2024:</b> <i>SIMUnet: an open-source tool for simultaneous global fits of EFT Wilson coefficients and PDFs,</i> with the PBSP team. <a href="https://arxiv.org/abs/2402.03308">2402.03308</a>.</li>
    <li><b>July 2023:</b> <i>Hide and seek: how PDFs can conceal New Physics,</i> with the PBSP team and Michelangelo Mangano. <a href="https://arxiv.org/abs/2307.10370">2307.10370.</a></li>
    <li><b>March 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses,</i> with the PBSP team and Juan Rojo. <a href="https://arxiv.org/abs/2303.06159">2303.06159</a>.</li>
    <li><b>March 2022:</b> <i>The dark side of the proton,</i> with Matthew McCullough and Maria Ubiali. <a href="https://arxiv.org/abs/2203.12628">2203.12628</a>.</li>
@@ -43,8 +44,19 @@
 
 <hr width=90%>
 
+<h2>PhD Thesis</h2>
+<p>My PhD thesis, <i>Parton Distributions in Beyond the Standard Model Theories</i>, was based on my first four publications, and an
+unpublished calculation comparing the 'Monte Carlo replica method' for producing interval estimates of parameters with a Bayesian method. It is available <a href="thesis.pdf">here</a>.</p>
+
+<br>
+
+<hr width=90%>
+
       <h2>Talks</h2>
  <ul>
+   <li><b>January 2024:</b> <i>Beyond the Standard Proton?</i>, outreach talk for Queens' Mathematical Society, at Queens' College, University of Cambridge. Slides available <a href="queens2024.pdf">here</a>.</li>
+   <li><b>December 2023:</b> <i>Hide and Seek: Can PDFs fit away New Physics signals?</i>, talk for PDF4LHC 2023 conference at CERN. Slides available <a href="pdf4lhc2023.pdf">here</a>.</li>
+   <li><b>August 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses</i>, talk for EPS 2023 conference at the University of Hamburg. Slides available <a href="eps2023.pdf">here</a>.</li>
    <li><b>June 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses</i>, talk for HEFT 2023 conference at the University of Manchester. Slides available <a href="heft2023.pdf">here</a>.</li>
    <li><b>May 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses</i>, seminar for the seminar series at the University of Cambridge. Slides available <a href="damtp2023.pdf">here</a>.</li>
    <li><b>April 2023:</b> <i>Parton distributions in BSM theories</i>, seminar for the seminar series at Argonne National Laboratory. Slides available <a href="anl2023.pdf">here</a>.</li>
