Updated paper list

--- a/research.html
+++ b/research.html
@@ -32,6 +32,7 @@
 
       <h2>Publications</h2>
  <ul>
+   <li><b>April 2024:</b> <i>A critical study of the Monte Carlo replica method,</i> with Mark Costantini, Maeve Madigan and Luca Mantani. <a href="https://arxiv.org/abs/2404.10056">2404.10056</a>.</li>
    <li><b>February 2024:</b> <i>SIMUnet: an open-source tool for simultaneous global fits of EFT Wilson coefficients and PDFs,</i> with the PBSP team. <a href="https://arxiv.org/abs/2402.03308">2402.03308</a>.</li>
    <li><b>July 2023:</b> <i>Hide and seek: how PDFs can conceal New Physics,</i> with the PBSP team and Michelangelo Mangano. <a href="https://arxiv.org/abs/2307.10370">2307.10370.</a></li>
    <li><b>March 2023:</b> <i>The top quark legacy of the LHC Run II for PDF and SMEFT analyses,</i> with the PBSP team and Juan Rojo. <a href="https://arxiv.org/abs/2303.06159">2303.06159</a>.</li>
