Updated page to reflect new physics job

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   <li class="button"><a href="index.html">Home</a></li>
   <li class="button"><a href="research.html">Research</a></li>
-  <li class="button"><a href="notes.html">Notes</a></li>
+  <li class="button"><a href="physics_notes.html">Physics Notes</a></li>
+  <li class="button"><a href="notes.html">Maths Notes</a></li>
 
 </ul>
 </div>
@@ -30,11 +31,12 @@
 
       <img src="website_photo.png" alt="Profile picture" style="float: right;   width: 300px;  margin-right:-20px; height: auto; padding:50px; margin-top:-10px; padding-bottom:40px;">
 
-      <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a particle physicist in the <a href="https://www.damtp.cam.ac.uk/">Department of Applied Mathematics and Theoretical Physics</a> (DAMTP) at the University of Cambridge. I am a member of the <a href="https://www.pbsp.org.uk/">Physics Beyond the Standard Proton</a> (PBSP) research group, headed by Maria Ubiali, and I study the interplay between parton distribution functions and possible beyond the Standard Model physics.<br><br>
-      To find out more about my work, check out the <a href="research.html">Research</a> page. If you are one of my students looking for resources for the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Cambridge Mathematical Tripos</a>, take a look at the <a href="notes.html">Notes</a> page.</p>
+      <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a particle physicist at the University of Cambridge. I am a fellow of <a href="https://www.lucy.cam.ac.uk/">Lucy Cavendish College</a>, where I am the Director of Studies in Physics for Part IA and Part IB.<br><br>
+      To find out more about my work, check out the <a href="research.html">Research</a> page. If you are one of my students looking for resources for the Cambridge Natural Sciences Tripos, take a look at the <a href="physics_notes.html">Physics Notes</a> page. <br><br>
+      Previously, I used to teach for the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Cambridge Mathematical Tripos</a>; I still have notes for some of the Part IB, Part II and Part III courses available at the <a href="notes.html">Maths Notes</a> page.</p>
 
     <h2>Contact</h2>
-    <p>The best way to contact me is via email, at <a href="mailto:james.moore@damtp.cam.ac.uk">james.moore@damtp.cam.ac.uk</a>. Alternatively, most of the time you can find me at the Centre for Mathematical Sciences, in office B1.15.</p>
+    <p>The best way to contact me is via email, at <a href="mailto:jmm232@cam.ac.uk">jmm232@cam.ac.uk</a>. Alternatively, most of the time you can find me in my college office.</p>
 
 </div>
 
