--- a/research.html
+++ b/research.html
@@ -19,7 +19,8 @@
 
   <li class="button"><a href="index.html">Home</a></li>
   <li class="button"><a href="research.html">Research</a></li>
-  <li class="button"><a href="notes.html">Notes</a></li>
+  <li class="button"><a href="physics_notes.html">Physics Notes</a></li>
+  <li class="button"><a href="notes.html">Maths Notes</a></li>
 
 </ul>
 </div>
