--- a/notes.html
+++ b/notes.html
@@ -19,13 +19,14 @@
 
   <li class="button"><a href="index.html">Home</a></li>
   <li class="button"><a href="research.html">Research</a></li>
-  <li class="button"><a href="notes.html">Notes</a></li>
+  <li class="button"><a href="physics_notes.html">Physics Notes</a></li>
+  <li class="button"><a href="notes.html">Maths Notes</a></li>
 
 </ul>
 </div>
 
 <div class="container">
-  <p> <br>On this page, you can find notes and handouts for various courses I took, and now teach, as part of the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Mathematical Tripos</a> at Cambridge.<br></p>
+  <p> <br>On this page, you can find notes and handouts for various courses I taught as part of the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Mathematical Tripos</a> at Cambridge.<br></p>
 
 <hr width=90%>
 
