--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- <h2>About me</h2> -->
   <p>
 
-      <img src="website_photo.png" alt="Profile picture" style="float: right;   width: 300px;  margin-right:-20px; height: auto; padding:50px; margin-top:-10px; padding-bottom:40px;">
+      <img src="new_photo.jpg" alt="Profile picture" style="float: right;   width: 300px;  margin-right:-20px; height: auto; padding:50px; margin-top:20px; padding-bottom:40px;">
 
       <br> </p><p style="font-size: 40px; color:#36486b; font-family:'Lobster Two', cursive;"><b>Hi there!</b></p> <p> I'm James, and I'm a particle physicist at the University of Cambridge. I am a fellow of <a href="https://www.lucy.cam.ac.uk/">Lucy Cavendish College</a>, where I am the Director of Studies in Physics for Part IA and Part IB.<br><br>
       To find out more about my work, check out the <a href="research.html">Research</a> page. If you are one of my students looking for resources for the Cambridge Natural Sciences Tripos, take a look at the <a href="physics_notes.html">Physics Notes</a> page. <br><br>
