--- a/research.html
+++ b/research.html
@@ -19,6 +19,7 @@
 
   <li class="button"><a href="index.html">Home</a></li>
   <li class="button"><a href="research.html">Research</a></li>
+  <li class="button"><a href="timetable.html">Timetable</a></li>
   <li class="button"><a href="physics_notes.html">Physics Notes</a></li>
   <li class="button"><a href="notes.html">Maths Notes</a></li>
 
