--- a/timetable.html
+++ b/timetable.html
@@ -29,8 +29,8 @@
 <div class="container">
   <p> <br>For the benefit of both myself and my students, here is my timetable for the term.</p>
 <hr width=90%>
-   <h2> <center> Michaelmas 2024: Weeks 1, 3, 5 and 7</center> </h2>
 
+<h2> <center> Michaelmas 2024: Weeks 2, 4, 6 and 8</center> </h2>
   <table>
     <tr>
       <th></th>
@@ -58,100 +58,103 @@
     </tr>
     <tr>
       <td>1:30pm-2:30pm</td>
-      <td>IB Methods (except Week 1)</td>
+      <td>-</td>
       <td>-</td>
       <td>IA Maths for NatSci</td>
       <td>IA Maths for NatSci</td>
-      <td>II Principles of QM (except Week 1)</td>
-
+      <td>-</td>
     </tr>
     <tr>
       <td>2:30pm-3:30pm</td>
-      <td>IB Methods (except Week 1)</td>
+      <td>-</td>
       <td>-</td>
       <td>IA Maths for NatSci</td>
       <td>IA Maths for NatSci</td>
       <td>IB Physics B (EM)</td>
-
     </tr>
     <tr>
       <td>3:30pm-4:30pm</td>
-      <td>IB Methods (except Week 1)</td>
+      <td>-</td>
       <td>-</td>
       <td>IA Maths for NatSci</td>
       <td>IA Maths for NatSci</td>
       <td>IB Physics B (EM)</td>
-
     </tr>
     <tr>
       <td>4:30pm-5:30pm</td>
-      <td>IB Methods (except Week 1)</td>
+      <td>-</td>
       <td>-</td>
       <td>IA Maths for NatSci</td>
       <td>IA Maths for NatSci</td>
-      <td>IB Physics B (EM)</td>
+      <td>IB Physics (EM)</td>
     </tr>
   </table>
+
 <br>
-  <h2> <center> Michaelmas 2024: Weeks 2, 4, 6 and 8</center> </h2>
-    <table>
-      <tr>
-        <th></th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-      </tr>
-      <tr>
-        <td>11:30am-12:30pm</td>
-        <td>-</td>
-        <td>-</td>
-        <td>IA Maths for NatSci</td>
-        <td>IA Maths for NatSci</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>12:30pm-1:30pm</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-        <td>Lunch</td>
-      </tr>
-      <tr>
-        <td>1:30pm-2:30pm</td>
-        <td>-</td>
-        <td>-</td>
-        <td>IA Maths for NatSci</td>
-        <td>IA Maths for NatSci</td>
-        <td>-</td>
-      </tr>
-      <tr>
-        <td>2:30pm-3:30pm</td>
-        <td>-</td>
-        <td>-</td>
-        <td>IA Maths for NatSci</td>
-        <td>IA Maths for NatSci</td>
-        <td>IB Physics B (EM) (except Week 8)</td>
-      </tr>
-      <tr>
-        <td>3:30pm-4:30pm</td>
-        <td>-</td>
-        <td>-</td>
-        <td>IA Maths for NatSci</td>
-        <td>IA Maths for NatSci</td>
-        <td>IB Physics B (EM) (except Week 8)</td>
-      </tr>
-      <tr>
-        <td>4:30pm-5:30pm</td>
-        <td>-</td>
-        <td>-</td>
-        <td>IA Maths for NatSci</td>
-        <td>IA Maths for NatSci</td>
-        <td>IB Physics (EM) (except Week 8)</td>
-      </tr>
-    </table>
+
+<h2> <center> Michaelmas 2024: Weeks 3, 5, 7 and 9</center> </h2>
+
+<table>
+ <tr>
+   <th></th>
+   <th>Thursday</th>
+   <th>Friday</th>
+   <th>Monday</th>
+   <th>Tuesday</th>
+   <th>Wednesday</th>
+ </tr>
+ <tr>
+   <td>11:30am-12:30pm</td>
+   <td>-</td>
+   <td>-</td>
+   <td>IA Maths for NatSci</td>
+   <td>IA Maths for NatSci</td>
+   <td>-</td>
+ </tr>
+ <tr>
+   <td>12:30pm-1:30pm</td>
+   <td>Lunch</td>
+   <td>Lunch</td>
+   <td>Lunch</td>
+   <td>Lunch</td>
+   <td>Lunch</td>
+ </tr>
+ <tr>
+   <td>1:30pm-2:30pm</td>
+   <td>IB Methods (except Week 9)</td>
+   <td>-</td>
+   <td>IA Maths for NatSci</td>
+   <td>IA Maths for NatSci</td>
+   <td>II Principles of QM (except Week 9)</td>
+
+ </tr>
+ <tr>
+   <td>2:30pm-3:30pm</td>
+   <td>IB Methods (except Week 9)</td>
+   <td>-</td>
+   <td>IA Maths for NatSci</td>
+   <td>IA Maths for NatSci</td>
+   <td>IB Physics B (EM) (except Week 9)</td>
+
+ </tr>
+ <tr>
+   <td>3:30pm-4:30pm</td>
+   <td>IB Methods (except Week 9)</td>
+   <td>-</td>
+   <td>IA Maths for NatSci</td>
+   <td>IA Maths for NatSci</td>
+   <td>IB Physics B (EM) (except Week 9)</td>
+
+ </tr>
+ <tr>
+   <td>4:30pm-5:30pm</td>
+   <td>IB Methods (except Week 9)</td>
+   <td>-</td>
+   <td>IA Maths for NatSci</td>
+   <td>IA Maths for NatSci</td>
+   <td>IB Physics B (EM) (except Week 9)</td>
+ </tr>
+</table>
 
 </div>
 
