Added some examples sheets for NatSciMaths

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -39,6 +39,26 @@
 
     <p>To do one of the starred (difficult and optional) questions, it will be useful to look up the <i>Gaussian integral</i>, described <a href="https://en.wikipedia.org/wiki/Gaussian_integral">here</a>.</p>
 
+  <hr width=90%>
+
+    <h2>
+      <!-- <img src="pochhammer.png" alt="Pochhammer Contour" style="float: right;   width: 400px;  margin-left:0px; height: auto; padding:20px; margin-top:0px; padding-bottom:20px;"> -->
+      Part IA Mathematics for Natural Sciences</h2>
+
+    <p>  In 2024-2025, I am supervising the Mathematics for Natural Sciences course. Here are my examples sheets.</p>
+
+    <h3>Mathematics A</h3>
+    <p><i>Work in progress...</i></p>
+
+      <h3>Mathematics B</h3>
+      <p>1. <a href="ExSheets/NatSciMaths/courseb_sheet1.pdf">Lines, planes and the scalar product</a><br>
+        2. <a href="ExSheets/NatSciMaths/courseb_sheet2.pdf">The vector product, vector area and coordinate systems</a><br>
+        3. <a href="ExSheets/NatSciMaths/courseb_sheet3.pdf">Complex numbers</a><br>
+        4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
+      </p>
+
+
+
 </div>
 
 </body>
