--- a/physics_notes.html
+++ b/physics_notes.html
@@ -48,13 +48,26 @@
     <p>  In 2024-2025, I am supervising the Mathematics for Natural Sciences course. Here are my examples sheets.</p>
 
     <h3>Mathematics A</h3>
-    <p><i>Work in progress...</i></p>
+    <p>
+    1. Vectors, lines and the scalar product<br>
+    2. Planes and the vector product<br>
+    3. Vector area, coordinate systems, and Cartesian complex numbers<br>
+    4. Euler's formula and hyperbolic functions<br>
+    5. Differentiation and curve-sketching<br>
+    6. Integration<br>
+    7. Power series and numerical methods<br>
+    8. Probability
+    </p>
 
       <h3>Mathematics B</h3>
       <p>1. <a href="ExSheets/NatSciMaths/courseb_sheet1.pdf">Lines, planes and the scalar product</a><br>
         2. <a href="ExSheets/NatSciMaths/courseb_sheet2.pdf">The vector product, vector area and coordinate systems</a><br>
         3. <a href="ExSheets/NatSciMaths/courseb_sheet3.pdf">Complex numbers</a><br>
         4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
+        5. Formal real analysis and power series<br>
+        6. Numerical methods and integral calculus<br>
+        7. Multiple integrals and the Gaussian integral<br>
+        8. Probability
       </p>
 
 
