Added sheet 5 Maths B

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -64,9 +64,9 @@
         2. <a href="ExSheets/NatSciMaths/courseb_sheet2.pdf">The vector product, vector area and coordinate systems</a><br>
         3. <a href="ExSheets/NatSciMaths/courseb_sheet3.pdf">Complex numbers</a><br>
         4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
-        5. Formal real analysis and power series<br>
-        6. Numerical methods and integral calculus<br>
-        7. Multiple integrals and the Gaussian integral<br>
+        5. <a href="ExSheets/NatSciMaths/courseb_sheet5.pdf">Formal real analysis</a><br>
+        6. Power series, numerical methods, and Riemann sums<br>
+        7. Integral calculus, multiple integrals and the Gaussian integral<br>
         8. Probability
       </p>
 
