--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       Previously, I used to teach for the <a href="https://en.wikipedia.org/wiki/Mathematical_Tripos">Cambridge Mathematical Tripos</a>; I still have notes for some of the Part IB, Part II and Part III courses available at the <a href="notes.html">Maths Notes</a> page.</p>
 
     <h2>Contact</h2>
-    <p>The best way to contact me is via email, at <a href="mailto:jmm232@cam.ac.uk">jmm232@cam.ac.uk</a>. Alternatively, most of the time you can find me in my college office.</p>
+    <p>The best way to contact me is via email, at <a href="mailto:jmm232@cam.ac.uk">jmm232@cam.ac.uk</a>. Alternatively, most of the time you can find me in my college office, B1 in Strathaird.</p>
 
 </div>
 
