--- a/physics_notes.html
+++ b/physics_notes.html
@@ -65,7 +65,7 @@
         3. <a href="ExSheets/NatSciMaths/courseb_sheet3.pdf">Complex numbers</a><br>
         4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
         5. <a href="ExSheets/NatSciMaths/courseb_sheet5.pdf">Formal real analysis</a><br>
-        6. Power series, numerical methods, and Riemann sums<br>
+        6. <a href="ExSheets/NatSciMaths/courseb_sheet6.pdf">Taylor series, numerical methods, and Riemann sums</a><br>
         7. Integral calculus, multiple integrals and the Gaussian integral<br>
         8. Probability
       </p>
