--- a/physics_notes.html
+++ b/physics_notes.html
@@ -66,7 +66,7 @@
         4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
         5. <a href="ExSheets/NatSciMaths/courseb_sheet5.pdf">Formal real analysis</a><br>
         6. <a href="ExSheets/NatSciMaths/courseb_sheet6.pdf">Taylor series, numerical methods, and Riemann sums</a><br>
-        7. Integral calculus, multiple integrals and the Gaussian integral<br>
+        7. <a href="ExSheets/NatSciMaths/courseb_sheet7.pdf">Integral calculus, multiple integrals and Gaussian integrals<br>
         8. Probability
       </p>
 
