--- a/timetable.html
+++ b/timetable.html
@@ -86,7 +86,7 @@
       <td>-</td>
       <td>IA Maths for NatSci</td>
       <td>IA Maths for NatSci</td>
-      <td>IB Physics (EM)</td>
+      <td>IB Physics B (EM)</td>
     </tr>
 
     <tr>
@@ -101,7 +101,7 @@
      <td>-</td>
      <td>-</td>
      <td>IA Maths for NatSci</td>
-     <td>-</td>
+     <td>IA Maths for NatSci</td>
      <td>-</td>
 
   </table>
@@ -182,7 +182,7 @@
  <td>-</td>
  <td>-</td>
  <td>IA Maths for NatSci</td>
- <td>-</td>
+ <td>IA Maths for NatSci</td>
  <td>-</td>
  </tr>
 </table>
