Added probability examples sheet

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -67,7 +67,7 @@
         5. <a href="ExSheets/NatSciMaths/courseb_sheet5.pdf">Formal real analysis</a><br>
         6. <a href="ExSheets/NatSciMaths/courseb_sheet6.pdf">Taylor series, numerical methods, and Riemann sums</a><br>
         7. <a href="ExSheets/NatSciMaths/courseb_sheet7.pdf">Integral calculus, multiple integrals and Gaussian integrals</a><br>
-        8. Probability
+        8. <a href="ExSheets/NatSciMaths/courseb_sheet8.pdf">Probability</a><br>
       </p>
 
 
