Removed timetable, added secret past paper solutions

--- a/secret.html
+++ b/secret.html
@@ -20,15 +20,18 @@
 
   <li class="button"><a href="index.html">Home</a></li>
   <li class="button"><a href="research.html">Research</a></li>
-  <li class="button"><a href="notes.html">Notes</a></li>
+  <li class="button"><a href="physics_notes.html">Physics Notes</a></li>
+  <li class="button"><a href="notes.html">Maths Notes</a></li>
 
 </ul>
 </div>
 
 <div class="container">
-  <p> <br>On this *secret* page, you can find solutions for some of the examples sheets in the mathematical tripos at Cambridge.<br></p>
+  <p> <br>On this *secret* page, you can find solutions for some of the examples sheets and past papers for both the mathematical tripos and the physical natural sciences tripos at Cambridge.<br></p>
 
 <hr width=90%><br>
+
+  <h2> Mathematical Tripos Examples Sheet Solutions </h2>
 
     <p>1. <a href="examples_sheet_solutions/sfp.pdf">Part III Symmetries, Fields and Particles</a><br>
       2. <a href="examples_sheet_solutions/pqm.pdf">Part II Principles of Quantum Mechanics</a><br>
@@ -36,6 +39,12 @@
       4. <a href="examples_sheet_solutions/em.pdf">Part IB Electromagnetism</a><br>
       5. <a href="examples_sheet_solutions/ca.pdf">Part IB Complex Analysis</a><br>
     </p>
+
+  <h2> Part IA Mathematics for Natural Sciences: Past Paper Solutions </h2>
+
+  <p>
+    2014. <a href="past_paper_solutions/maths_for_natsci_ia/2014.pdf">Unofficial Mark Scheme</a>
+  </p>
 
 </div>
 
