Added rough solutions for Methods and Stats

--- a/secret.html
+++ b/secret.html
@@ -38,6 +38,8 @@
       3. <a href="examples_sheet_solutions/fcm.pdf">Part II Further Complex Methods</a><br>
       4. <a href="examples_sheet_solutions/em.pdf">Part IB Electromagnetism</a><br>
       5. <a href="examples_sheet_solutions/ca.pdf">Part IB Complex Analysis</a><br>
+      6. <a href="examples_sheet_solutions/methods_rough.pdf">Part IB Mathematical Methods (Rough and incomplete)</a><br>
+      7. <a href="examples_sheet_solutions/stats_rough.pdf">>Part IB Statistics (Rough and incomplete)</a><br>
     </p>
 
   <h2> Part IA Mathematics for Natural Sciences: Past Paper Solutions </h2>
