Added first four EM examples sheets.

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -69,7 +69,19 @@
         8. <a href="ExSheets/NatSciMaths/courseb_sheet8.pdf">Probability</a><br>
       </p>
 
+    <hr width=90%>
 
+    <h2>
+      <!-- <img src="pochhammer.png" alt="Pochhammer Contour" style="float: right;   width: 400px;  margin-left:0px; height: auto; padding:20px; margin-top:0px; padding-bottom:20px;"> -->
+      Part IB Physics B: Electromagnetism</h2>
+
+    <p>  From 2024-2025 I supervised the Physics B Electromagnetism course, and I will be doing so again in 2025-2026. Here are my examples sheets for 2025-2026.</p>
+
+      <p>1. <a href="ExSheets/PhysBEM/em_sheet1.pdf">Electrostatic force and potential, electric dipoles, and Gauss’ law</a><br>
+        2. <a href="ExSheets/PhysBEM/em_sheet2.pdf">Poisson’s equation and the method of images</a><br>
+        3. <a href="ExSheets/PhysBEM/em_sheet3.pdf">Capacitors, electrostatic energy, virtual work, and dielectrics</a><br>
+        4. <a href="ExSheets/PhysBEM/em_sheet4.pdf">The Biot-Savart law, magnetic dipoles, and Ampère’s law</a><br>
+      </p>
 
 </div>
 
