--- a/research.html
+++ b/research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>J Moore: Physics</title>
+  <title>James Moore: Physics</title>
   <link type='text/css' rel='stylesheet' href='style.css'>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Lobster+Two:400,700" rel="stylesheet">
 </head>
@@ -33,6 +33,7 @@
 
       <h2>Publications</h2>
  <ul>
+   <li><b>July 2025:</b> <i>A linear PDF model for Bayesian inference,</i> with Mark Costantini, Luca Mantani, and Maria Ubiali. <a href="https://arxiv.org/abs/2507.16913">2507.16913</a>.</li>
    <li><b>April 2024:</b> <i>A critical study of the Monte Carlo replica method,</i> with Mark Costantini, Maeve Madigan and Luca Mantani. <a href="https://arxiv.org/abs/2404.10056">2404.10056</a>.</li>
    <li><b>February 2024:</b> <i>SIMUnet: an open-source tool for simultaneous global fits of EFT Wilson coefficients and PDFs,</i> with the PBSP team. <a href="https://arxiv.org/abs/2402.03308">2402.03308</a>.</li>
    <li><b>July 2023:</b> <i>Hide and seek: how PDFs can conceal New Physics,</i> with the PBSP team and Michelangelo Mangano. <a href="https://arxiv.org/abs/2307.10370">2307.10370.</a></li>
