--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>J Moore: Physics</title>
+  <title>James Moore: Physics</title>
   <link type='text/css' rel='stylesheet' href='style.css'>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Lobster+Two:400,700" rel="stylesheet">
 </head>
