New maths examples sheets

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -61,14 +61,12 @@
 -->
 
       <h3>Mathematics B</h3>
-      <p>1. <a href="ExSheets/NatSciMaths/courseb_sheet1.pdf">Lines, planes and the scalar product</a><br>
-        2. <a href="ExSheets/NatSciMaths/courseb_sheet2.pdf">The vector product, vector area and coordinate systems</a><br>
-        3. <a href="ExSheets/NatSciMaths/courseb_sheet3.pdf">Complex numbers</a><br>
-        4. <a href="ExSheets/NatSciMaths/courseb_sheet4.pdf">Hyperbolic functions and differential calculus</a><br>
-        5. <a href="ExSheets/NatSciMaths/courseb_sheet5.pdf">Formal real analysis</a><br>
-        6. <a href="ExSheets/NatSciMaths/courseb_sheet6.pdf">Taylor series, numerical methods, and Riemann sums</a><br>
-        7. <a href="ExSheets/NatSciMaths/courseb_sheet7.pdf">Integral calculus, multiple integrals and Gaussian integrals</a><br>
-        8. <a href="ExSheets/NatSciMaths/courseb_sheet8.pdf">Probability</a><br>
+      <p>1. <a href="ExSheets/NatSciMaths/maths_b_sheet_1.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
+        2. <a href="ExSheets/NatSciMaths/maths_b_sheet_2.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
+        3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br>
+        4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br>
+        5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br>
+        6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a>
       </p>
 
     <hr width=90%>
