--- a/physics_notes.html
+++ b/physics_notes.html
@@ -60,6 +60,21 @@
     </p>
 -->
 
+      <h3>Mathematics A</h3>
+      <p>1. <a href="">Basics of vector geometry, and the scalar product</a><br>
+         2. <a href="">The vector product, and triple products of vectors</a><br>
+         3. <a href="">Vector area, polar coordinate systems, and complex numbers</a><br>
+         4. <a href="">More complex numbers, and hyperbolic functions</a><br>
+         5. <a href="">Differential calculus, Riemann sums, and basic integrals</a><br>
+         6. <a href="">Methods of integration</a><br>
+         7. <a href="">Taylor series</a><br>
+         8. <a href="">Probability spaces</a><br>
+         9. <a href="">Probability distributions</a><br>
+         10. <a href="">First-order differential equations</a><br>
+         11. <a href="">Linear differential equations</a><br>
+         12. <a href="">Partial differentiation</a>
+      </p>
+
       <h3>Mathematics B</h3>
       <p>1. <a href="ExSheets/NatSciMaths/maths_b_sheet_1.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
         2. <a href="ExSheets/NatSciMaths/maths_b_sheet_2.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
