Fixed links to Sheet 1-6 Maths A

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -61,12 +61,12 @@
 -->
 
       <h3>Mathematics A</h3>
-      <p>1. <a href="">Basics of vector geometry, and the scalar product</a><br>
-         2. <a href="">The vector product, and triple products of vectors</a><br>
-         3. <a href="">Vector area, polar coordinate systems, and complex numbers</a><br>
-         4. <a href="">More complex numbers, and hyperbolic functions</a><br>
-         5. <a href="">Differential calculus, Riemann sums, and basic integrals</a><br>
-         6. <a href="">Methods of integration</a><br>
+      <p>1. <a href="ExSheets/NatSciMaths/maths_a_sheet_1.pdf">Basics of vector geometry, and the scalar product</a><br>
+         2. <a href="ExSheets/NatSciMaths/maths_a_sheet_2.pdf">The vector product, and triple products of vectors</a><br>
+         3. <a href="ExSheets/NatSciMaths/maths_a_sheet_3.pdf">Vector area, polar coordinate systems, and complex numbers</a><br>
+         4. <a href="ExSheets/NatSciMaths/maths_a_sheet_4.pdf">More complex numbers, and hyperbolic functions</a><br>
+         5. <a href="ExSheets/NatSciMaths/maths_a_sheet_5.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
+         6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
          7. <a href="">Taylor series</a><br>
          8. <a href="">Probability spaces</a><br>
          9. <a href="">Probability distributions</a><br>
