--- a/physics_notes.html
+++ b/physics_notes.html
@@ -44,7 +44,7 @@
       <!-- <img src="pochhammer.png" alt="Pochhammer Contour" style="float: right;   width: 400px;  margin-left:0px; height: auto; padding:20px; margin-top:0px; padding-bottom:20px;"> -->
       Part IA Mathematics for Natural Sciences</h2>
 
-    <p>  In 2024-2025, I am supervising the Mathematics for Natural Sciences course. Here are my examples sheets.</p>
+    <p>  From 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. Here are my examples sheets.</p>
 
 <!--
     <h3>Mathematics A</h3>
