--- a/physics_notes.html
+++ b/physics_notes.html
@@ -65,12 +65,12 @@
          2. <a href="ExSheets/NatSciMaths/maths_a_sheet_2.pdf">The vector product, and triple products of vectors</a><br>
          3. <a href="ExSheets/NatSciMaths/maths_a_sheet_3.pdf">Vector area, polar coordinate systems, and complex numbers</a><br>
          4. <a href="ExSheets/NatSciMaths/maths_a_sheet_4.pdf">More complex numbers, and hyperbolic functions</a><br>
-         5. <a href="ExSheets/NatSciMaths/maths_a_sheet_5.pdf">Differential calculus, Riemann sums, and basic integrals</a>
-<!--
+         5. <a href="ExSheets/NatSciMaths/maths_a_sheet_5.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
          6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
-         7. <a href="">Taylor series</a><br>
-         8. <a href="">Probability spaces</a><br>
-         9. <a href="">Probability distributions</a><br>
+         7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br>
+         8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
+         9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a>
+<!--
          10. <a href="">First-order differential equations</a><br>
          11. <a href="">Linear differential equations</a><br>
          12. <a href="">Partial differentiation</a>
